# abdulazizoner.github.io

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  SYSTEM_REPORT.md  astro.config.mjs  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini
_temp_frontend/: aonware-index.html  base.css  blog-detail.html  production-blueprint.html  project-detail.html
aonware_ai/: asgi.py  urls.py  wsgi.py
aonware_ai/settings/: base.py  local.py  production.py
api_gateway/: tests.py  urls.py
api_gateway/api/: blog.py  portfolio.py
blog/: api.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py
core/: views.py
docs/: 404.html  index.html
docs/_astro/: site.DEth1PQY.css  site.DTfTX1XJ.css  site.Db73Soo_.css  site.PzNCDzf2.css  site.h2QLjOtT.css
docs/assets/: site.css  site.js
docs/projects/: firatasistan.html  legal-risk-nlp.html  trendai.html
portfolio/: admin.py  api.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
public/assets/: site.js
scripts/: postbuild.mjs
src/case-studies/: firatasistan-en.html  firatasistan-tr.html  legal-risk-nlp-en.html  legal-risk-nlp-tr.html  trendai-en.html  trendai-tr.html
src/components/: CaseStudyContent.astro  CaseStudyNav.astro  Footer.astro  Header.astro  I18n.astro  ProjectCard.astro  SectionHeader.astro  Seo.astro  SkillCard.astro  ThemeLanguageControls.astro
src/data/: case-study-html.ts  projects.ts  site.ts
src/layouts/: BaseLayout.astro
static/: base.js
users/: models.py
(+10 files in other folders)
