[project]
name = "aonware-ai"
version = "0.1.0"
description = "Aonware.ai Backend"
authors = [
    {name = "Aonware"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.1.0,<5.2.0)",
    "django-ninja (>=1.6.2,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "django-autoslug (>=1.9.9,<2.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "bandit (>=1.7.5)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "django-stubs (>=6.0.3,<7.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
extend-ignore = ["F403", "F405"]

[tool.bandit]
exclude_dirs = ["tests"]
